list of matched and missed UTRs for each tool; output fixed gff3 for GETUTR.

--- a/results/c_elegans/getutr_analysis.ipynb
+++ b/results/c_elegans/getutr_analysis.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "d80996d9",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "[2176 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,6 +669,37 @@
     "tdf = pd.merge(tdf, gdf, on=\"name\")\n",
     "test_utrs = tdf.groupby([\"strand\", \"gene\"]).agg({\"start\": min, \"end\": max}).reset_index(\"strand\")\n",
     "test_utrs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc4d603f",
+   "metadata": {},
+   "source": [
+    "Write out a GETUTR output with aggregated UTRs. This is useful for visualisation in Artemis, as well as being necessary to call GFFCompare."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d4432b43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(out_dir, \"getutr_output.fixed.gff3\"), \"w\") as f:\n",
+    "    for idx, (gid, row) in enumerate(test_utrs.iterrows(), 1):\n",
+    "        feature = gffutils.Feature(\n",
+    "            seqid=\"I\",\n",
+    "            source=\"GETUTR\",\n",
+    "            featuretype=\"three_prime_UTR\",\n",
+    "            start=row.start,\n",
+    "            end=row.end,\n",
+    "            score=\".\",\n",
+    "            strand=row.strand,\n",
+    "            frame=\".\",\n",
+    "            attributes={\"Name\": [gid], \"Parent\": [\"Gene:\" + gid], \"ID\": [\"three_prime_UTR_{}\".format(idx)] }\n",
+    "        )\n",
+    "        f.write(str(feature) + \"\\n\")"
    ]
   },
   {
@@ -689,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "592d8b04",
    "metadata": {},
    "outputs": [
@@ -841,7 +872,7 @@
        "[2176 rows x 5 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "aa4a4051",
    "metadata": {},
    "outputs": [
@@ -893,10 +924,12 @@
     "\n",
     "BP1 = 50\n",
     "BP2 = 200\n",
-    "num_matched =  len(test_utrs[abs(test_utrs[\"difference\"]) <= BP1])\n",
+    "genes_matched_utr =  test_utrs[abs(test_utrs[\"difference\"]) <= BP1].index\n",
+    "num_matched = len(genes_matched_utr)\n",
     "num_reduced = len(test_utrs[test_utrs['difference'] < -BP1])\n",
     "num_extended1 = len(test_utrs[(test_utrs['difference'] > BP1) & (test_utrs['difference'] <= BP2)])\n",
     "num_extended2 = len(test_utrs[test_utrs['difference'] > BP2])\n",
+    "\n",
     "\n",
     "print(\"Canonical utrs that are missed by GETUTR: {} ({:.2f}%)\".format(num_missed_utrs, 100*num_missed_utrs/total_control))\n",
     "print(\"GETUTR utrs that match true utr to within {} bases: {} ({:.2f}%)\".format(BP1, num_matched, 100*num_matched/total_control))\n",
@@ -912,177 +945,26 @@
    "id": "408e532b",
    "metadata": {},
    "source": [
-    "Save list of gene ids with novel 3' UTRs called by GETUTR"
+    "Save lists of gene ids with novel, matched and missed 3' UTRs called by GETUTR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "cddb9383",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WBGene00000013\n",
-      "WBGene00000612\n",
-      "WBGene00000628\n",
-      "WBGene00000632\n",
-      "WBGene00001067\n",
-      "WBGene00001614\n",
-      "WBGene00001640\n",
-      "WBGene00001641\n",
-      "WBGene00001745\n",
-      "WBGene00001941\n",
-      "WBGene00003977\n",
-      "WBGene00004196\n",
-      "WBGene00005046\n",
-      "WBGene00005048\n",
-      "WBGene00005049\n",
-      "WBGene00005050\n",
-      "WBGene00005051\n",
-      "WBGene00005524\n",
-      "WBGene00005528\n",
-      "WBGene00005529\n",
-      "WBGene00006044\n",
-      "WBGene00006047\n",
-      "WBGene00006399\n",
-      "WBGene00007638\n",
-      "WBGene00007658\n",
-      "WBGene00007708\n",
-      "WBGene00007770\n",
-      "WBGene00007854\n",
-      "WBGene00007855\n",
-      "WBGene00007976\n",
-      "WBGene00008161\n",
-      "WBGene00008188\n",
-      "WBGene00008291\n",
-      "WBGene00008381\n",
-      "WBGene00008475\n",
-      "WBGene00008479\n",
-      "WBGene00008529\n",
-      "WBGene00008662\n",
-      "WBGene00008855\n",
-      "WBGene00008885\n",
-      "WBGene00009128\n",
-      "WBGene00009251\n",
-      "WBGene00009252\n",
-      "WBGene00009263\n",
-      "WBGene00009359\n",
-      "WBGene00009362\n",
-      "WBGene00009607\n",
-      "WBGene00009646\n",
-      "WBGene00009667\n",
-      "WBGene00009696\n",
-      "WBGene00009960\n",
-      "WBGene00009961\n",
-      "WBGene00010291\n",
-      "WBGene00010401\n",
-      "WBGene00010568\n",
-      "WBGene00010577\n",
-      "WBGene00010586\n",
-      "WBGene00010740\n",
-      "WBGene00010821\n",
-      "WBGene00010857\n",
-      "WBGene00011234\n",
-      "WBGene00011651\n",
-      "WBGene00011658\n",
-      "WBGene00011659\n",
-      "WBGene00011780\n",
-      "WBGene00011781\n",
-      "WBGene00011785\n",
-      "WBGene00011934\n",
-      "WBGene00012151\n",
-      "WBGene00012212\n",
-      "WBGene00012213\n",
-      "WBGene00012232\n",
-      "WBGene00012270\n",
-      "WBGene00012389\n",
-      "WBGene00012394\n",
-      "WBGene00012483\n",
-      "WBGene00012509\n",
-      "WBGene00012945\n",
-      "WBGene00013179\n",
-      "WBGene00013404\n",
-      "WBGene00013512\n",
-      "WBGene00013723\n",
-      "WBGene00014182\n",
-      "WBGene00014188\n",
-      "WBGene00014196\n",
-      "WBGene00015018\n",
-      "WBGene00015020\n",
-      "WBGene00015636\n",
-      "WBGene00016565\n",
-      "WBGene00016727\n",
-      "WBGene00017399\n",
-      "WBGene00017854\n",
-      "WBGene00017908\n",
-      "WBGene00017977\n",
-      "WBGene00018003\n",
-      "WBGene00018233\n",
-      "WBGene00018525\n",
-      "WBGene00018527\n",
-      "WBGene00018530\n",
-      "WBGene00018596\n",
-      "WBGene00018772\n",
-      "WBGene00018791\n",
-      "WBGene00018851\n",
-      "WBGene00018868\n",
-      "WBGene00018979\n",
-      "WBGene00019992\n",
-      "WBGene00020556\n",
-      "WBGene00020660\n",
-      "WBGene00020900\n",
-      "WBGene00021175\n",
-      "WBGene00021280\n",
-      "WBGene00021335\n",
-      "WBGene00021458\n",
-      "WBGene00021477\n",
-      "WBGene00022111\n",
-      "WBGene00022112\n",
-      "WBGene00022133\n",
-      "WBGene00022275\n",
-      "WBGene00022282\n",
-      "WBGene00022365\n",
-      "WBGene00022367\n",
-      "WBGene00022751\n",
-      "WBGene00044348\n",
-      "WBGene00044432\n",
-      "WBGene00044435\n",
-      "WBGene00044746\n",
-      "WBGene00045048\n",
-      "WBGene00077728\n",
-      "WBGene00077764\n",
-      "WBGene00077766\n",
-      "WBGene00077773\n",
-      "WBGene00194656\n",
-      "WBGene00206464\n",
-      "WBGene00219281\n",
-      "WBGene00235390\n",
-      "WBGene00255420\n",
-      "WBGene00255550\n",
-      "WBGene00269435\n",
-      "WBGene00271779\n",
-      "WBGene00284845\n",
-      "WBGene00303030\n",
-      "WBGene00303032\n",
-      "WBGene00303055\n",
-      "WBGene00303056\n",
-      "WBGene00303057\n",
-      "WBGene00303058\n",
-      "WBGene00303070\n",
-      "WBGene00303078\n",
-      "WBGene00303082\n",
-      "WBGene00303094\n",
-      "WBGene00303097\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(os.path.join(out_dir, \"novel_utr_genes_getutr.txt\"), \"w\") as f:\n",
     "    for g in sorted(list(novel_utr_genes)):\n",
-    "        print(g)\n",
+    "        f.write(g + \"\\n\")\n",
+    "\n",
+    "with open(os.path.join(out_dir, \"matched_utr_genes_getutr.txt\"), \"w\") as f:\n",
+    "    for g in sorted(list(genes_matched_utr)):\n",
+    "        f.write(g + \"\\n\")\n",
+    "\n",
+    "with open(os.path.join(out_dir, \"missed_utr_genes_getutr.txt\"), \"w\") as f:\n",
+    "    for g in sorted(list(genes_missed_utr)):\n",
     "        f.write(g + \"\\n\")"
    ]
   }
