--- a/results/c_elegans/peaks2utr_analysis.ipynb
+++ b/results/c_elegans/peaks2utr_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "1a104969",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "30604c64",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a45d2844",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "[2278 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "76d7a055",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "[4703 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "60b0dc8b",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
        "[4197 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "35a5f8b1",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "[2593 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "5b72a67b",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "[2278 rows x 5 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "25272924",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,8 @@
     "\n",
     "BP1 = 50\n",
     "BP2 = 200\n",
-    "num_matched =  len(test_utrs[abs(test_utrs[\"difference\"]) <= BP1])\n",
+    "genes_matched_utr =  test_utrs[abs(test_utrs[\"difference\"]) <= BP1].index\n",
+    "num_matched = len(genes_matched_utr)\n",
     "num_reduced = len(test_utrs[test_utrs['difference'] < -BP1])\n",
     "num_extended1 = len(test_utrs[(test_utrs['difference'] > BP1) & (test_utrs['difference'] <= BP2)])\n",
     "num_extended2 = len(test_utrs[test_utrs['difference'] > BP2])\n",
@@ -911,162 +912,26 @@
    "id": "ec34014f",
    "metadata": {},
    "source": [
-    "Save list of gene ids with novel 3' UTRs called by peaks2utr"
+    "Save lists of gene ids with novel, matched and missed 3' UTRs called by peaks2utr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "c1f7b246",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WBGene00000013\n",
-      "WBGene00000632\n",
-      "WBGene00000633\n",
-      "WBGene00001542\n",
-      "WBGene00001614\n",
-      "WBGene00001745\n",
-      "WBGene00001941\n",
-      "WBGene00001942\n",
-      "WBGene00003977\n",
-      "WBGene00004196\n",
-      "WBGene00005043\n",
-      "WBGene00005049\n",
-      "WBGene00005050\n",
-      "WBGene00005051\n",
-      "WBGene00005528\n",
-      "WBGene00005529\n",
-      "WBGene00006044\n",
-      "WBGene00006047\n",
-      "WBGene00006048\n",
-      "WBGene00006399\n",
-      "WBGene00007158\n",
-      "WBGene00007638\n",
-      "WBGene00007658\n",
-      "WBGene00007708\n",
-      "WBGene00007770\n",
-      "WBGene00007854\n",
-      "WBGene00007855\n",
-      "WBGene00007976\n",
-      "WBGene00008162\n",
-      "WBGene00008188\n",
-      "WBGene00008291\n",
-      "WBGene00008695\n",
-      "WBGene00008885\n",
-      "WBGene00009117\n",
-      "WBGene00009128\n",
-      "WBGene00009316\n",
-      "WBGene00009359\n",
-      "WBGene00009362\n",
-      "WBGene00009616\n",
-      "WBGene00009646\n",
-      "WBGene00009667\n",
-      "WBGene00009696\n",
-      "WBGene00009960\n",
-      "WBGene00010162\n",
-      "WBGene00010169\n",
-      "WBGene00010291\n",
-      "WBGene00010399\n",
-      "WBGene00010568\n",
-      "WBGene00010740\n",
-      "WBGene00010823\n",
-      "WBGene00011432\n",
-      "WBGene00011584\n",
-      "WBGene00011651\n",
-      "WBGene00011656\n",
-      "WBGene00011778\n",
-      "WBGene00011779\n",
-      "WBGene00011780\n",
-      "WBGene00011784\n",
-      "WBGene00011785\n",
-      "WBGene00012151\n",
-      "WBGene00012214\n",
-      "WBGene00012215\n",
-      "WBGene00012232\n",
-      "WBGene00012233\n",
-      "WBGene00012266\n",
-      "WBGene00012268\n",
-      "WBGene00012270\n",
-      "WBGene00012483\n",
-      "WBGene00012505\n",
-      "WBGene00012952\n",
-      "WBGene00013179\n",
-      "WBGene00013182\n",
-      "WBGene00013184\n",
-      "WBGene00013404\n",
-      "WBGene00013723\n",
-      "WBGene00014182\n",
-      "WBGene00014236\n",
-      "WBGene00016565\n",
-      "WBGene00016727\n",
-      "WBGene00017854\n",
-      "WBGene00017908\n",
-      "WBGene00018003\n",
-      "WBGene00018525\n",
-      "WBGene00018527\n",
-      "WBGene00018530\n",
-      "WBGene00018771\n",
-      "WBGene00018791\n",
-      "WBGene00018868\n",
-      "WBGene00020556\n",
-      "WBGene00020660\n",
-      "WBGene00020860\n",
-      "WBGene00021175\n",
-      "WBGene00021335\n",
-      "WBGene00021458\n",
-      "WBGene00021473\n",
-      "WBGene00021477\n",
-      "WBGene00021845\n",
-      "WBGene00022111\n",
-      "WBGene00022112\n",
-      "WBGene00022365\n",
-      "WBGene00022367\n",
-      "WBGene00022751\n",
-      "WBGene00022754\n",
-      "WBGene00044242\n",
-      "WBGene00044348\n",
-      "WBGene00044432\n",
-      "WBGene00044435\n",
-      "WBGene00044746\n",
-      "WBGene00045048\n",
-      "WBGene00045234\n",
-      "WBGene00077728\n",
-      "WBGene00077764\n",
-      "WBGene00077766\n",
-      "WBGene00077773\n",
-      "WBGene00086563\n",
-      "WBGene00206464\n",
-      "WBGene00219234\n",
-      "WBGene00219285\n",
-      "WBGene00219319\n",
-      "WBGene00219422\n",
-      "WBGene00219796\n",
-      "WBGene00235390\n",
-      "WBGene00255420\n",
-      "WBGene00284854\n",
-      "WBGene00303028\n",
-      "WBGene00303055\n",
-      "WBGene00303070\n",
-      "WBGene00303082\n",
-      "WBGene00303090\n",
-      "WBGene00303094\n",
-      "WBGene00303097\n",
-      "WBGene00304792\n",
-      "WBGene00305048\n",
-      "WBGene00305049\n",
-      "WBGene00305050\n",
-      "WBGene00306076\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(os.path.join(out_dir, \"novel_utr_genes_peaks2utr.txt\"), \"w\") as f:\n",
     "    for g in sorted(list(novel_utr_genes)):\n",
-    "        print(g)\n",
+    "        f.write(g + \"\\n\")\n",
+    "\n",
+    "with open(os.path.join(out_dir, \"matched_utr_genes_peaks2utr.txt\"), \"w\") as f:\n",
+    "    for g in sorted(list(genes_matched_utr)):\n",
+    "        f.write(g + \"\\n\")\n",
+    "\n",
+    "with open(os.path.join(out_dir, \"missed_utr_genes_peaks2utr.txt\"), \"w\") as f:\n",
+    "    for g in sorted(list(genes_missed_utr)):\n",
     "        f.write(g + \"\\n\")"
    ]
   }
