--- a/results/c_elegans/utrme_analysis.ipynb
+++ b/results/c_elegans/utrme_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 1,
    "id": "458728fb",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 2,
    "id": "59ae4ad4",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bfd56f5d",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "[4703 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "3ed2df20",
    "metadata": {},
    "outputs": [
@@ -239,49 +239,50 @@
        "      <th>end</th>\n",
        "      <th>strand</th>\n",
        "      <th>name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>gene</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>WBGene00022278</th>\n",
        "      <td>22939</td>\n",
        "      <td>24650</td>\n",
        "      <td>-</td>\n",
        "      <td>Y74C9A.4a.1</td>\n",
-       "      <td>WBGene00022278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>WBGene00000812</th>\n",
        "      <td>80344</td>\n",
        "      <td>81000</td>\n",
        "      <td>+</td>\n",
        "      <td>Y48G1C.2b.1</td>\n",
-       "      <td>WBGene00000812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>WBGene00021681</th>\n",
        "      <td>101245</td>\n",
        "      <td>101504</td>\n",
        "      <td>-</td>\n",
        "      <td>Y48G1C.8a.1</td>\n",
-       "      <td>WBGene00021681</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>WBGene00004274</th>\n",
        "      <td>108769</td>\n",
        "      <td>109264</td>\n",
        "      <td>-</td>\n",
        "      <td>F53G12.1.1</td>\n",
-       "      <td>WBGene00004274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>WBGene00003229</th>\n",
        "      <td>133582</td>\n",
        "      <td>134271</td>\n",
        "      <td>+</td>\n",
        "      <td>F53G12.5b.1</td>\n",
-       "      <td>WBGene00003229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -289,71 +290,66 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>502</th>\n",
+       "      <th>WBGene00006711</th>\n",
        "      <td>14823733</td>\n",
        "      <td>14824009</td>\n",
        "      <td>+</td>\n",
        "      <td>Y54E5B.4.1</td>\n",
-       "      <td>WBGene00006711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>503</th>\n",
+       "      <th>WBGene00009304</th>\n",
        "      <td>14833448</td>\n",
        "      <td>14834697</td>\n",
        "      <td>-</td>\n",
        "      <td>F32A7.3a.1</td>\n",
-       "      <td>WBGene00009304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>504</th>\n",
+       "      <th>WBGene00002189</th>\n",
        "      <td>14951567</td>\n",
        "      <td>14952030</td>\n",
        "      <td>+</td>\n",
        "      <td>ZK909.2h.1</td>\n",
-       "      <td>WBGene00002189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>505</th>\n",
+       "      <th>WBGene00000469</th>\n",
        "      <td>14965021</td>\n",
        "      <td>14965417</td>\n",
        "      <td>+</td>\n",
        "      <td>ZK909.4.1</td>\n",
-       "      <td>WBGene00000469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>506</th>\n",
+       "      <th>WBGene00013969</th>\n",
        "      <td>15001585</td>\n",
        "      <td>15001631</td>\n",
        "      <td>+</td>\n",
        "      <td>ZK337.1b.1</td>\n",
-       "      <td>WBGene00013969</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>507 rows × 5 columns</p>\n",
+       "<p>507 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        start       end strand         name            gene\n",
-       "0       22939     24650      -  Y74C9A.4a.1  WBGene00022278\n",
-       "1       80344     81000      +  Y48G1C.2b.1  WBGene00000812\n",
-       "2      101245    101504      -  Y48G1C.8a.1  WBGene00021681\n",
-       "3      108769    109264      -   F53G12.1.1  WBGene00004274\n",
-       "4      133582    134271      +  F53G12.5b.1  WBGene00003229\n",
-       "..        ...       ...    ...          ...             ...\n",
-       "502  14823733  14824009      +   Y54E5B.4.1  WBGene00006711\n",
-       "503  14833448  14834697      -   F32A7.3a.1  WBGene00009304\n",
-       "504  14951567  14952030      +   ZK909.2h.1  WBGene00002189\n",
-       "505  14965021  14965417      +    ZK909.4.1  WBGene00000469\n",
-       "506  15001585  15001631      +   ZK337.1b.1  WBGene00013969\n",
+       "                   start       end strand         name\n",
+       "gene                                                  \n",
+       "WBGene00022278     22939     24650      -  Y74C9A.4a.1\n",
+       "WBGene00000812     80344     81000      +  Y48G1C.2b.1\n",
+       "WBGene00021681    101245    101504      -  Y48G1C.8a.1\n",
+       "WBGene00004274    108769    109264      -   F53G12.1.1\n",
+       "WBGene00003229    133582    134271      +  F53G12.5b.1\n",
+       "...                  ...       ...    ...          ...\n",
+       "WBGene00006711  14823733  14824009      +   Y54E5B.4.1\n",
+       "WBGene00009304  14833448  14834697      -   F32A7.3a.1\n",
+       "WBGene00002189  14951567  14952030      +   ZK909.2h.1\n",
+       "WBGene00000469  14965021  14965417      +    ZK909.4.1\n",
+       "WBGene00013969  15001585  15001631      +   ZK337.1b.1\n",
        "\n",
-       "[507 rows x 5 columns]"
+       "[507 rows x 4 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 5,
    "id": "45c174e8",
    "metadata": {},
    "outputs": [
@@ -502,7 +498,7 @@
        "[496 rows x 3 columns]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "id": "d2d77389",
    "metadata": {},
    "outputs": [
@@ -676,7 +672,7 @@
        "[4197 rows x 5 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 7,
    "id": "c1995505",
    "metadata": {},
    "outputs": [
@@ -826,7 +822,7 @@
        "[2593 rows x 3 columns]"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 8,
    "id": "52ebdb54",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1002,7 @@
        "[496 rows x 5 columns]"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 9,
    "id": "c2e294c1",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1054,8 @@
     "\n",
     "BP1 = 50\n",
     "BP2 = 200\n",
-    "num_matched =  len(test_utrs[abs(test_utrs[\"difference\"]) <= BP1])\n",
+    "genes_matched_utr =  test_utrs[abs(test_utrs[\"difference\"]) <= BP1].index\n",
+    "num_matched = len(genes_matched_utr)\n",
     "num_reduced = len(test_utrs[test_utrs['difference'] < -BP1])\n",
     "num_extended1 = len(test_utrs[(test_utrs['difference'] > BP1) & (test_utrs['difference'] <= BP2)])\n",
     "num_extended2 = len(test_utrs[test_utrs['difference'] > BP2])\n",
@@ -1077,48 +1074,26 @@
    "id": "f9a5e30e",
    "metadata": {},
    "source": [
-    "Save list of gene ids with novel 3' UTRs called by UTRme"
+    "Save lists of gene ids with novel, matched and missed 3' UTRs called by UTRme"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 14,
    "id": "68e9ae72",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WBGene00000632\n",
-      "WBGene00001745\n",
-      "WBGene00003977\n",
-      "WBGene00006044\n",
-      "WBGene00007976\n",
-      "WBGene00010291\n",
-      "WBGene00011651\n",
-      "WBGene00011934\n",
-      "WBGene00012389\n",
-      "WBGene00012483\n",
-      "WBGene00013404\n",
-      "WBGene00016727\n",
-      "WBGene00017908\n",
-      "WBGene00018596\n",
-      "WBGene00019992\n",
-      "WBGene00020556\n",
-      "WBGene00021473\n",
-      "WBGene00022112\n",
-      "WBGene00022367\n",
-      "WBGene00044348\n",
-      "WBGene00044435\n",
-      "WBGene00305050\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(os.path.join(out_dir, \"novel_utr_genes_utrme.txt\"), \"w\") as f:\n",
     "    for g in sorted(list(novel_utr_genes)):\n",
-    "        print(g)\n",
+    "        f.write(g + \"\\n\")\n",
+    "        \n",
+    "with open(os.path.join(out_dir, \"matched_utr_genes_utrme.txt\"), \"w\") as f:\n",
+    "    for g in sorted(list(genes_matched_utr)):\n",
+    "        f.write(g + \"\\n\")\n",
+    "\n",
+    "with open(os.path.join(out_dir, \"missed_utr_genes_utrme.txt\"), \"w\") as f:\n",
+    "    for g in sorted(list(genes_missed_utr)):\n",
     "        f.write(g + \"\\n\")"
    ]
   }
